remove spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 
 spring.data.mongodb.uri=mongodb+srv://docemonos:pass1234@stridermongo-4ef3j.mongodb.net/test
 spring.data.mongodb.database=conexion_mongo
+server.port=8081
